--- a/youtube.html
+++ b/youtube.html
@@ -4,6 +4,12 @@
   <title>Exemplu de machetare prin TABLE!</title>
 </head>
 <body>
-<h1>Exemplu</h1>
+
+<tble>
+  <tr>
+    <td></td>
+  </tr>
+</tble>
+
 </body>
 </html>
