--- a/youtube.html
+++ b/youtube.html
@@ -4,12 +4,33 @@
   <title>Exemplu de machetare prin TABLE!</title>
 </head>
 <body>
-
-<tble>
+  <h1 align="center">Youtube</h1>
+<table border="1" width="90%" height="700" align="center">
   <tr>
-    <td></td>
+    <td rowspan="3" width="60%">1</td>
+    <td width="20%">2</td>
+    <td width="20%">3</td>
   </tr>
-</tble>
-
+  <tr>
+    <!-- <td>4</td> -->
+    <td>5</td>
+    <td>6</td>
+  </tr>
+  <tr>
+    <!-- <td>7</td> -->
+    <td>8</td>
+    <td>9</td>
+  </tr>
+  <tr>
+    <td rowspan="2">10</td>
+    <td>11</td>
+    <td>12</td>
+  </tr>
+  <tr>
+    <!-- <td>13</td> -->
+    <td>14</td>
+    <td>15</td>
+  </tr>
+</table>
 </body>
 </html>
