--- a/create-account-form.html
+++ b/create-account-form.html
@@ -5,8 +5,23 @@
   <title>&#10096;&#10095;Create an Account&#10096;&#10095;</title>
 </head>
 <body>
-  <h1 align="center">&#128104;Create an account</h1>
+  <h1 align="center"><font color="black">&#128104;Create an account </font></h1>
+
   <hr>
+  <table align="center" border="1" width="800">
+    <tr>
+      <td bgcolor="#FFF8DC">A</td>
+      <td width="50%" bgcolor="#FFF8DC">
+        <textarea cols="60" rows="8" placeholder="Descrie-te..."></textarea>
+      </td>
+      <td align="center" bgcolor="#FFF8DC">
+        <label>
+      <input type="checkbox">I Agree with <a href="terms.html" target="_blank">terms!</a>
+    </label>
+        <hr>
+        <button><br>Register...<br><br></button></td>
+    </tr>
+  </table>
   <hr>
   <p align="center">Drepturile de autor &copy; 2018</p>
 </body>
