--- a/article-style.html
+++ b/article-style.html
@@ -49,7 +49,15 @@
     .medium{
       float: left;
       margin-right: 50px;
+      opacity: 0.5;
     }
+    .medium:hover{
+      opacity: 1;
+    }
+    a:hover{
+      color: blue;
+    }
+
   </style>
   <meta charset="UTF-8">
   <title></title>
